--- a/res/layout/link_display_fragment.xml
+++ b/res/layout/link_display_fragment.xml
@@ -18,5 +18,19 @@
         android:progress="0"
         android:max="100"
         android:indeterminate="true"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/comments_button"
+            android:text="@string/comments"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:textSize="14sp"
+        />
+    </LinearLayout>
          
 </LinearLayout>
